[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "API Consumer"
authors = [
    {name = "Valentin B", email = "contact@valbou.fr"},
]
description = "An open-source lib to consume API REST (especially DRF)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU General Public License v3.0"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "asyncio",
    "requests",
]
dynamic = ["version"]

optional-dependencies.dev = [
    "black",
    "isort",
    "coverage",
    "bandit",
    "colorama",
    "Faker",
    "flake8",
    "mccabe",
]

[tool.setuptools_scm]

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90
skip_covered = true
skip_empty = true
sort = "cover"
